Prevent a null-favorites case to break the app.

--- a/src/app/components/functional/menu/menu.component.scss
+++ b/src/app/components/functional/menu/menu.component.scss
@@ -21,3 +21,11 @@
     display: inline-block;
   }
 }
+
+.favs-nav {
+  overflow: auto;
+  max-height: 130px;
+  li {
+    padding-right: 10px;
+  }
+}
